Added edit capability to tag names

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddTagActivity"
+            android:name=".AddEditTagActivity"
             android:parentActivityName=".MainActivity" />
     </application>
 
