--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.gp.nfctagmanager">
+
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature
+        android:name="android.hardware.nfc.hce"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -8,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop">
@@ -20,7 +27,14 @@
         </activity>
         <activity
             android:name=".AddEditTagActivity"
+            android:parentActivityName=".EditActivity" />
+        <activity
+            android:name=".EditActivity"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ScanActivity"
+            android:parentActivityName=".MainActivity" />
+
     </application>
 
 </manifest>
